website/versioned_docs/version-2.16.x/reference/targets/file.mdx
---
title: file
---

import Field from "@site/src/components/reference/Field";
import styles from "@site/src/components/reference/styles.module.css";

---

A single loose file that lives outside of code packages.

Files are placed directly in archives, outside of code artifacts such as Python wheels or JVM JARs. The sources of a `file` target are accessed via filesystem APIs, such as Python&#x27;s `open()`, via paths relative to the repository root.

Backend: <span className="color--primary">`pants.core`</span>

---

<span className={styles.options}>

## `tags`

<Field
    type_repr={`field.type_hint`}
>

Arbitrary strings to describe a target.

For example, you may tag some test targets with &#x27;integration_test&#x27; so that you could run `scie-pants-linux-x86_64 --tag='integration_test' test ::` to only run on targets with that tag.

</Field>

## `description`

<Field
    type_repr={`field.type_hint`}
>

A human-readable description of the target.

Use `scie-pants-linux-x86_64 list --documented ::` to see all targets with descriptions.

</Field>

## `dependencies`

<Field
    type_repr={`field.type_hint`}
>

Addresses to other targets that this target depends on, e.g. [&#x27;helloworld/subdir:lib&#x27;, &#x27;helloworld/main.py:lib&#x27;, &#x27;3rdparty:reqs#django&#x27;].

This augments any dependencies inferred by Pants, such as by analyzing your imports. Use `scie-pants-linux-x86_64 dependencies` or `scie-pants-linux-x86_64 peek` on this target to get the final result.

See https://www.pantsbuild.org/v2.16/docs/targets for more about how addresses are formed, including for generated targets. You can also run `scie-pants-linux-x86_64 list ::` to find all addresses in your project, or `scie-pants-linux-x86_64 list dir` to find all addresses defined in that directory.

If the target is in the same BUILD file, you can leave off the BUILD file path, e.g. `:tgt` instead of `helloworld/subdir:tgt`. For generated first-party addresses, use `./` for the file path, e.g. `./main.py:tgt`; for all other generated targets, use `:tgt#generated_name`.

You may exclude dependencies by prefixing with `!`, e.g. `['!helloworld/subdir:lib', '!./sibling.txt']`. Ignores are intended for false positives with dependency inference; otherwise, simply leave off the dependency from the BUILD file.

</Field>

## `source`

<Field
    type_repr={`field.type_hint`}
>

The source of this target.

If a string is provided, represents a path that is relative to the BUILD file&#x27;s directory, e.g. `source='example.ext'`.

If an http_source is provided, represents the network location to download the source from. The downloaded file will exist in the sandbox in the same directory as the target.

`http_source` has the following signature:
```
http_source(url: str, *, len: int, sha256: str, filename: str = "")
```

The filename defaults to the last part of the URL path (E.g. `example.ext`), but can also be specified if you wish to have control over the file name. You cannot, however, specify a path separator to download the file into a subdirectory (you must declare a target in desired subdirectory).

You can easily get the len and checksum with the following command:
```
`curl -L $URL | tee >(wc -c) >(shasum -a 256) >/dev/null`
```

If a `per_platform` is provided, represents a mapping from platform to `http_source`, where the platform is one of (linux_arm64, linux_x86_64, macos_arm64, macos_x86_64) and is resolved in the execution target. Each `http_source` value MUST have the same filename provided.

</Field>



</span>